[package]

name = "globetter"
version = "0.1.0"
authors = ["mtkennerly <mtkennerly@gmail.com>", "The Rust Project Developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mtkennerly/globetter"
repository = "https://github.com/mtkennerly/globetter"
documentation = "https://docs.rs/globetter"
readme = "README.md"
description = """
Glob fork with bug fixes! Support for matching file paths against Unix shell style patterns.
"""
categories = ["filesystem"]

[dev-dependencies]
tempdir = "0.3"
doc-comment = "0.3"
